create symbol colunm

--- a/File date check.ipynb
+++ b/File date check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NAS['Symbol']='COMP'\n",
+    "DOW['Symbol']='DJIA'\n",
+    "RUT['Symbol']='RUT 2000'\n",
+    "SPX['Symbol']='SPX 500'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -73,72 +85,80 @@
        "      <th>High</th>\n",
        "      <th>Low</th>\n",
        "      <th>Close</th>\n",
+       "      <th>Symbol</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>11/30/2020</td>\n",
-       "      <td>29854.51</td>\n",
-       "      <td>29854.51</td>\n",
-       "      <td>29463.64</td>\n",
-       "      <td>29638.64</td>\n",
+       "      <td>12224.25</td>\n",
+       "      <td>12244.65</td>\n",
+       "      <td>12027.16</td>\n",
+       "      <td>12198.74</td>\n",
+       "      <td>COMP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>11/27/2020</td>\n",
-       "      <td>29911.33</td>\n",
-       "      <td>30015.13</td>\n",
-       "      <td>29819.98</td>\n",
-       "      <td>29910.37</td>\n",
+       "      <td>12159.18</td>\n",
+       "      <td>12236.23</td>\n",
+       "      <td>12154.57</td>\n",
+       "      <td>12205.85</td>\n",
+       "      <td>COMP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>11/25/2020</td>\n",
-       "      <td>30058.87</td>\n",
-       "      <td>30058.87</td>\n",
-       "      <td>29806.25</td>\n",
-       "      <td>29872.47</td>\n",
+       "      <td>12053.89</td>\n",
+       "      <td>12114.77</td>\n",
+       "      <td>12020.95</td>\n",
+       "      <td>12094.40</td>\n",
+       "      <td>COMP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>11/24/2020</td>\n",
-       "      <td>29746.11</td>\n",
-       "      <td>30116.51</td>\n",
-       "      <td>29746.11</td>\n",
-       "      <td>30046.24</td>\n",
+       "      <td>11939.33</td>\n",
+       "      <td>12049.88</td>\n",
+       "      <td>11863.45</td>\n",
+       "      <td>12036.79</td>\n",
+       "      <td>COMP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>11/23/2020</td>\n",
-       "      <td>29332.82</td>\n",
-       "      <td>29667.75</td>\n",
-       "      <td>29332.82</td>\n",
-       "      <td>29591.27</td>\n",
+       "      <td>11916.76</td>\n",
+       "      <td>11949.33</td>\n",
+       "      <td>11796.53</td>\n",
+       "      <td>11880.63</td>\n",
+       "      <td>COMP</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Date      Open      High       Low     Close\n",
-       "0  11/30/2020  29854.51  29854.51  29463.64  29638.64\n",
-       "1  11/27/2020  29911.33  30015.13  29819.98  29910.37\n",
-       "2  11/25/2020  30058.87  30058.87  29806.25  29872.47\n",
-       "3  11/24/2020  29746.11  30116.51  29746.11  30046.24\n",
-       "4  11/23/2020  29332.82  29667.75  29332.82  29591.27"
+       "         Date      Open      High       Low     Close Symbol\n",
+       "0  11/30/2020  12224.25  12244.65  12027.16  12198.74   COMP\n",
+       "1  11/27/2020  12159.18  12236.23  12154.57  12205.85   COMP\n",
+       "2  11/25/2020  12053.89  12114.77  12020.95  12094.40   COMP\n",
+       "3  11/24/2020  11939.33  12049.88  11863.45  12036.79   COMP\n",
+       "4  11/23/2020  11916.76  11949.33  11796.53  11880.63   COMP"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "NAS.head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -162,119 +182,119 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>unix</th>\n",
-       "      <th>date</th>\n",
-       "      <th>symbol</th>\n",
-       "      <th>open</th>\n",
-       "      <th>high</th>\n",
-       "      <th>low</th>\n",
-       "      <th>close</th>\n",
-       "      <th>Volume BCH</th>\n",
+       "      <th>Unix Timestamp</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Symbol</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume BTC</th>\n",
        "      <th>Volume USD</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1599609600</td>\n",
-       "      <td>9/9/2020</td>\n",
-       "      <td>BCH/USD</td>\n",
-       "      <td>222.28</td>\n",
-       "      <td>224.10</td>\n",
-       "      <td>218.53</td>\n",
-       "      <td>222.64</td>\n",
-       "      <td>840773.59</td>\n",
-       "      <td>3806.41</td>\n",
+       "      <td>1605830400</td>\n",
+       "      <td>11/20/2020</td>\n",
+       "      <td>BTCUSD</td>\n",
+       "      <td>17821.58</td>\n",
+       "      <td>18239.00</td>\n",
+       "      <td>17764.76</td>\n",
+       "      <td>18142.52</td>\n",
+       "      <td>3909.44</td>\n",
+       "      <td>7.043700e+07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1599523200</td>\n",
-       "      <td>9/8/2020</td>\n",
-       "      <td>BCH/USD</td>\n",
-       "      <td>228.78</td>\n",
-       "      <td>230.47</td>\n",
-       "      <td>215.90</td>\n",
-       "      <td>222.28</td>\n",
-       "      <td>5037488.62</td>\n",
-       "      <td>22526.33</td>\n",
+       "      <td>1605744000</td>\n",
+       "      <td>11/19/2020</td>\n",
+       "      <td>BTCUSD</td>\n",
+       "      <td>17782.91</td>\n",
+       "      <td>18193.29</td>\n",
+       "      <td>17356.00</td>\n",
+       "      <td>17821.58</td>\n",
+       "      <td>17141.49</td>\n",
+       "      <td>3.062015e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1599436800</td>\n",
-       "      <td>9/7/2020</td>\n",
-       "      <td>BCH/USD</td>\n",
-       "      <td>227.69</td>\n",
-       "      <td>229.88</td>\n",
-       "      <td>215.78</td>\n",
-       "      <td>228.78</td>\n",
-       "      <td>6226370.73</td>\n",
-       "      <td>27795.53</td>\n",
+       "      <td>1605657600</td>\n",
+       "      <td>11/18/2020</td>\n",
+       "      <td>BTCUSD</td>\n",
+       "      <td>17679.36</td>\n",
+       "      <td>18488.00</td>\n",
+       "      <td>17205.02</td>\n",
+       "      <td>17782.91</td>\n",
+       "      <td>32425.64</td>\n",
+       "      <td>5.791200e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1599350400</td>\n",
-       "      <td>9/6/2020</td>\n",
-       "      <td>BCH/USD</td>\n",
-       "      <td>225.74</td>\n",
-       "      <td>233.26</td>\n",
-       "      <td>219.20</td>\n",
-       "      <td>227.69</td>\n",
-       "      <td>5232916.02</td>\n",
-       "      <td>23027.00</td>\n",
+       "      <td>1605571200</td>\n",
+       "      <td>11/17/2020</td>\n",
+       "      <td>BTCUSD</td>\n",
+       "      <td>16726.64</td>\n",
+       "      <td>17880.00</td>\n",
+       "      <td>16575.42</td>\n",
+       "      <td>17679.36</td>\n",
+       "      <td>25230.04</td>\n",
+       "      <td>4.365493e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1599264000</td>\n",
-       "      <td>9/5/2020</td>\n",
-       "      <td>BCH/USD</td>\n",
-       "      <td>230.93</td>\n",
-       "      <td>234.96</td>\n",
-       "      <td>214.50</td>\n",
-       "      <td>225.74</td>\n",
-       "      <td>13992453.13</td>\n",
-       "      <td>62468.00</td>\n",
+       "      <td>1605484800</td>\n",
+       "      <td>11/16/2020</td>\n",
+       "      <td>BTCUSD</td>\n",
+       "      <td>15966.89</td>\n",
+       "      <td>16892.00</td>\n",
+       "      <td>15879.00</td>\n",
+       "      <td>16726.64</td>\n",
+       "      <td>13948.06</td>\n",
+       "      <td>2.300768e+08</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         unix      date   symbol    open    high     low   close   Volume BCH  \\\n",
-       "0  1599609600  9/9/2020  BCH/USD  222.28  224.10  218.53  222.64    840773.59   \n",
-       "1  1599523200  9/8/2020  BCH/USD  228.78  230.47  215.90  222.28   5037488.62   \n",
-       "2  1599436800  9/7/2020  BCH/USD  227.69  229.88  215.78  228.78   6226370.73   \n",
-       "3  1599350400  9/6/2020  BCH/USD  225.74  233.26  219.20  227.69   5232916.02   \n",
-       "4  1599264000  9/5/2020  BCH/USD  230.93  234.96  214.50  225.74  13992453.13   \n",
+       "   Unix Timestamp        Date  Symbol      Open      High       Low     Close  \\\n",
+       "0      1605830400  11/20/2020  BTCUSD  17821.58  18239.00  17764.76  18142.52   \n",
+       "1      1605744000  11/19/2020  BTCUSD  17782.91  18193.29  17356.00  17821.58   \n",
+       "2      1605657600  11/18/2020  BTCUSD  17679.36  18488.00  17205.02  17782.91   \n",
+       "3      1605571200  11/17/2020  BTCUSD  16726.64  17880.00  16575.42  17679.36   \n",
+       "4      1605484800  11/16/2020  BTCUSD  15966.89  16892.00  15879.00  16726.64   \n",
        "\n",
-       "   Volume USD  \n",
-       "0     3806.41  \n",
-       "1    22526.33  \n",
-       "2    27795.53  \n",
-       "3    23027.00  \n",
-       "4    62468.00  "
+       "   Volume BTC    Volume USD  \n",
+       "0     3909.44  7.043700e+07  \n",
+       "1    17141.49  3.062015e+08  \n",
+       "2    32425.64  5.791200e+08  \n",
+       "3    25230.04  4.365493e+08  \n",
+       "4    13948.06  2.300768e+08  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bch.head()"
+    "btc.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['Resource/Coinbase_BCHUSD_d.csv', 'Resource/Coinbase_BTCUSD_d.csv', 'Resource/Coinbase_EOSUSD_d.csv', 'Resource/Coinbase_ETCUSD_d.csv', 'Resource/Coinbase_ETHUSD_d.csv', 'Resource/Coinbase_LINKUSD_d.csv', 'Resource/Coinbase_LTCUSD_d.csv', 'Resource/Coinbase_REPUSD_d.csv', 'Resource/Coinbase_XLMUSD_d.csv', 'Resource/Coinbase_XRPUSD_d.csv', 'Resource/COMP HistoricalPrices.csv', 'Resource/DJIA HistoricalPrices.csv', 'Resource/RUT 2000 HistoricalPrices.csv', 'Resource/SPX 500 HistoricalPrices.csv'])"
+       "dict_keys([])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +508,7 @@
        "[1627 rows x 9 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -658,7 +678,7 @@
        "13   Resource/SPX 500 HistoricalPrices.csv     1/10/2014  9/9/2020"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +836,7 @@
        "9           Resource/Coinbase_XRPUSD_d.csv    2020-01-01  9/9/2020"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -834,21 +854,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'head'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-19-1a505c0d154f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcsv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'head'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
