add start of write up

--- a/File date check.ipynb
+++ b/File date check.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ETL Project:\n",
+    "## Building a SQL Data Base for Comparison and Modeling of Cryptocurrency and Stock Markets\n",
+    "\n",
+    "#### Team Members: Ashley Zhang, Steven Brown, Wiliam Enriquez, Isaac Medina\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
