--- a/File date check.ipynb
+++ b/File date check.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
        "4    62468.00  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -214,6 +214,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
        "      <th>Date</th>\n",
        "      <th>Open</th>\n",
        "      <th>High</th>\n",
@@ -225,6 +226,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>11/30/2020</td>\n",
        "      <td>12224.25</td>\n",
        "      <td>12244.65</td>\n",
@@ -234,6 +236,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>11/27/2020</td>\n",
        "      <td>12159.18</td>\n",
        "      <td>12236.23</td>\n",
@@ -243,6 +246,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>11/25/2020</td>\n",
        "      <td>12053.89</td>\n",
        "      <td>12114.77</td>\n",
@@ -252,6 +256,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>11/24/2020</td>\n",
        "      <td>11939.33</td>\n",
        "      <td>12049.88</td>\n",
@@ -261,6 +266,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>11/23/2020</td>\n",
        "      <td>11916.76</td>\n",
        "      <td>11949.33</td>\n",
@@ -273,15 +279,15 @@
        "</div>"
       ],
       "text/plain": [
-       "         Date      Open      High       Low     Close Symbol\n",
-       "0  11/30/2020  12224.25  12244.65  12027.16  12198.74   COMP\n",
-       "1  11/27/2020  12159.18  12236.23  12154.57  12205.85   COMP\n",
-       "2  11/25/2020  12053.89  12114.77  12020.95  12094.40   COMP\n",
-       "3  11/24/2020  11939.33  12049.88  11863.45  12036.79   COMP\n",
-       "4  11/23/2020  11916.76  11949.33  11796.53  11880.63   COMP"
+       "   Unnamed: 0        Date      Open      High       Low     Close Symbol\n",
+       "0           0  11/30/2020  12224.25  12244.65  12027.16  12198.74   COMP\n",
+       "1           1  11/27/2020  12159.18  12236.23  12154.57  12205.85   COMP\n",
+       "2           2  11/25/2020  12053.89  12114.77  12020.95  12094.40   COMP\n",
+       "3           3  11/24/2020  11939.33  12049.88  11863.45  12036.79   COMP\n",
+       "4           4  11/23/2020  11916.76  11949.33  11796.53  11880.63   COMP"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,149 +331,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>File</th>\n",
-       "      <th>Earliest Date</th>\n",
-       "      <th>Last Date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Resource/Coinbase_BCHUSD_d.csv</td>\n",
-       "      <td>1/1/2018</td>\n",
-       "      <td>9/9/2020</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Resource/Coinbase_BTCUSD_d.csv</td>\n",
-       "      <td>1/1/2015</td>\n",
-       "      <td>9/9/2020</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Resource/Coinbase_EOSUSD_d.csv</td>\n",
-       "      <td>1/1/2020</td>\n",
-       "      <td>9/9/2020</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Resource/Coinbase_ETCUSD_d.csv</td>\n",
-       "      <td>1/1/2019</td>\n",
-       "      <td>9/9/2020</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Resource/Coinbase_ETHUSD_d.csv</td>\n",
-       "      <td>1/1/2017</td>\n",
-       "      <td>9/9/2020</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Resource/Coinbase_LINKUSD_d.csv</td>\n",
-       "      <td>1/1/2020</td>\n",
-       "      <td>9/9/2020</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Resource/Coinbase_LTCUSD_d.csv</td>\n",
-       "      <td>1/1/2017</td>\n",
-       "      <td>9/9/2020</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Resource/Coinbase_REPUSD_d.csv</td>\n",
-       "      <td>1/1/2020</td>\n",
-       "      <td>9/9/2020</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Resource/Coinbase_XLMUSD_d.csv</td>\n",
-       "      <td>1/1/2020</td>\n",
-       "      <td>9/9/2020</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Resource/Coinbase_XRPUSD_d.csv</td>\n",
-       "      <td>1/1/2020</td>\n",
-       "      <td>9/9/2020</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Resource/COMP HistoricalPrices.csv</td>\n",
-       "      <td>1/10/2014</td>\n",
-       "      <td>9/9/2020</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Resource/DJIA HistoricalPrices.csv</td>\n",
-       "      <td>1/10/2014</td>\n",
-       "      <td>9/9/2020</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Resource/RUT 2000 HistoricalPrices.csv</td>\n",
-       "      <td>1/10/2014</td>\n",
-       "      <td>9/9/2020</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Resource/SPX 500 HistoricalPrices.csv</td>\n",
-       "      <td>1/10/2014</td>\n",
-       "      <td>9/9/2020</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                      File Earliest Date Last Date\n",
-       "0           Resource/Coinbase_BCHUSD_d.csv      1/1/2018  9/9/2020\n",
-       "1           Resource/Coinbase_BTCUSD_d.csv      1/1/2015  9/9/2020\n",
-       "2           Resource/Coinbase_EOSUSD_d.csv      1/1/2020  9/9/2020\n",
-       "3           Resource/Coinbase_ETCUSD_d.csv      1/1/2019  9/9/2020\n",
-       "4           Resource/Coinbase_ETHUSD_d.csv      1/1/2017  9/9/2020\n",
-       "5          Resource/Coinbase_LINKUSD_d.csv      1/1/2020  9/9/2020\n",
-       "6           Resource/Coinbase_LTCUSD_d.csv      1/1/2017  9/9/2020\n",
-       "7           Resource/Coinbase_REPUSD_d.csv      1/1/2020  9/9/2020\n",
-       "8           Resource/Coinbase_XLMUSD_d.csv      1/1/2020  9/9/2020\n",
-       "9           Resource/Coinbase_XRPUSD_d.csv      1/1/2020  9/9/2020\n",
-       "10      Resource/COMP HistoricalPrices.csv     1/10/2014  9/9/2020\n",
-       "11      Resource/DJIA HistoricalPrices.csv     1/10/2014  9/9/2020\n",
-       "12  Resource/RUT 2000 HistoricalPrices.csv     1/10/2014  9/9/2020\n",
-       "13   Resource/SPX 500 HistoricalPrices.csv     1/10/2014  9/9/2020"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_dict = {'File': csv_list, 'Earliest Date': min_dates, 'Last Date': max_dates}\n",
     "df = pd.DataFrame(data_dict)"
@@ -475,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +489,7 @@
        "9           Resource/Coinbase_XRPUSD_d.csv    2020-01-01  9/9/2020"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,15 +505,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#drop columns\n",
+    "# NAS = NAS.drop(['Unnamed: 0'], axis=1)\n",
+    "DOW = DOW.drop(['Unnamed: 0'], axis=1)\n",
+    "RUT = RUT.drop(['Unnamed: 0'], axis=1)\n",
+    "SPX = SPX.drop(['Unnamed: 0'], axis=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         Date      Open      High       Low     Close Symbol\n",
+      "0  11/30/2020  12224.25  12244.65  12027.16  12198.74   COMP\n",
+      "1  11/27/2020  12159.18  12236.23  12154.57  12205.85   COMP\n",
+      "2  11/25/2020  12053.89  12114.77  12020.95  12094.40   COMP\n",
+      "3  11/24/2020  11939.33  12049.88  11863.45  12036.79   COMP\n",
+      "4  11/23/2020  11916.76  11949.33  11796.53  11880.63   COMP\n",
+      "         Date      Open      High       Low     Close Symbol\n",
+      "0  11/30/2020  29854.51  29854.51  29463.64  29638.64   DJIA\n",
+      "1  11/27/2020  29911.33  30015.13  29819.98  29910.37   DJIA\n",
+      "2  11/25/2020  30058.87  30058.87  29806.25  29872.47   DJIA\n",
+      "3  11/24/2020  29746.11  30116.51  29746.11  30046.24   DJIA\n",
+      "4  11/23/2020  29332.82  29667.75  29332.82  29591.27   DJIA\n",
+      "         Date     Open     High      Low    Close    Symbol\n",
+      "0  11/30/2020  1854.87  1854.87  1813.56  1819.82  RUT 2000\n",
+      "1  11/27/2020  1846.26  1855.27  1845.50  1855.27  RUT 2000\n",
+      "2  11/25/2020  1852.62  1852.62  1831.95  1845.02  RUT 2000\n",
+      "3  11/24/2020  1819.52  1862.17  1819.52  1853.53  RUT 2000\n",
+      "4  11/23/2020  1787.24  1827.60  1787.24  1818.30  RUT 2000\n",
+      "         Date     Open     High      Low    Close   Symbol\n",
+      "0  11/30/2020  3634.18  3634.18  3594.39  3621.63  SPX 500\n",
+      "1  11/27/2020  3638.55  3644.31  3629.33  3638.35  SPX 500\n",
+      "2  11/25/2020  3635.50  3635.50  3617.76  3629.65  SPX 500\n",
+      "3  11/24/2020  3594.52  3642.31  3594.52  3635.41  SPX 500\n",
+      "4  11/23/2020  3566.82  3589.81  3552.77  3577.59  SPX 500\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(NAS.head())\n",
+    "print(DOW.head())\n",
+    "print(RUT.head())\n",
+    "print(SPX.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "#write stock index data back to csv files (includes stock symbol column)\n",
-    "#NAS.to_csv('Resource/COMP HistoricalPrices.csv')\n",
-    "#DOW.to_csv('Resource/DJIA HistoricalPrices.csv')\n",
-    "#RUT.to_csv('Resource/RUT 2000 HistoricalPrices.csv')\n",
-    "#SPX.to_csv('Resource/SPX 500 HistoricalPrices.csv')\n"
+    "NAS.to_csv('Resource/COMP HistoricalPrices.csv', index=False)\n",
+    "DOW.to_csv('Resource/DJIA HistoricalPrices.csv', index=False)\n",
+    "RUT.to_csv('Resource/RUT 2000 HistoricalPrices.csv', index=False)\n",
+    "SPX.to_csv('Resource/SPX 500 HistoricalPrices.csv', index=False)"
    ]
   }
  ],
