add index columns

--- a/File date check.ipynb
+++ b/File date check.ipynb
@@ -20,12 +20,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Dependencies and Setup\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "# Loading CSV FILES containing Market Data\n",
     "\n",
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +180,7 @@
        "4    62468.00  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +215,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>Date</th>\n",
        "      <th>Open</th>\n",
        "      <th>High</th>\n",
@@ -226,7 +226,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>11/30/2020</td>\n",
        "      <td>12224.25</td>\n",
        "      <td>12244.65</td>\n",
@@ -236,7 +235,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>11/27/2020</td>\n",
        "      <td>12159.18</td>\n",
        "      <td>12236.23</td>\n",
@@ -246,7 +244,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>11/25/2020</td>\n",
        "      <td>12053.89</td>\n",
        "      <td>12114.77</td>\n",
@@ -256,7 +253,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>11/24/2020</td>\n",
        "      <td>11939.33</td>\n",
        "      <td>12049.88</td>\n",
@@ -266,7 +262,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>11/23/2020</td>\n",
        "      <td>11916.76</td>\n",
        "      <td>11949.33</td>\n",
@@ -279,12 +274,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0        Date      Open      High       Low     Close Symbol\n",
-       "0           0  11/30/2020  12224.25  12244.65  12027.16  12198.74   COMP\n",
-       "1           1  11/27/2020  12159.18  12236.23  12154.57  12205.85   COMP\n",
-       "2           2  11/25/2020  12053.89  12114.77  12020.95  12094.40   COMP\n",
-       "3           3  11/24/2020  11939.33  12049.88  11863.45  12036.79   COMP\n",
-       "4           4  11/23/2020  11916.76  11949.33  11796.53  11880.63   COMP"
+       "         Date      Open      High       Low     Close Symbol\n",
+       "0  11/30/2020  12224.25  12244.65  12027.16  12198.74   COMP\n",
+       "1  11/27/2020  12159.18  12236.23  12154.57  12205.85   COMP\n",
+       "2  11/25/2020  12053.89  12114.77  12020.95  12094.40   COMP\n",
+       "3  11/24/2020  11939.33  12049.88  11863.45  12036.79   COMP\n",
+       "4  11/23/2020  11916.76  11949.33  11796.53  11880.63   COMP"
       ]
      },
      "execution_count": 3,
@@ -505,21 +500,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#drop columns\n",
-    "# NAS = NAS.drop(['Unnamed: 0'], axis=1)\n",
-    "DOW = DOW.drop(['Unnamed: 0'], axis=1)\n",
-    "RUT = RUT.drop(['Unnamed: 0'], axis=1)\n",
-    "SPX = SPX.drop(['Unnamed: 0'], axis=1)\n"
+    "# #drop columns\n",
+    "# # NAS = NAS.drop(['Unnamed: 0'], axis=1)\n",
+    "# DOW = DOW.drop(['Unnamed: 0'], axis=1)\n",
+    "# RUT = RUT.drop(['Unnamed: 0'], axis=1)\n",
+    "# SPX = SPX.drop(['Unnamed: 0'], axis=1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -561,15 +558,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#write stock index data back to csv files (includes stock symbol column)\n",
+    "# #Add index column\n",
+    "list_dfs = [bch, btc, eos, etc, eth, lnk, ltc, rep, xlm, xrp, NAS, DOW, RUT, SPX]\n",
+    "for df in list_dfs:\n",
+    "    df['Index'] = np.arange(len(df))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Symbol</th>\n",
+       "      <th>Index</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>11/30/2020</td>\n",
+       "      <td>12224.25</td>\n",
+       "      <td>12244.65</td>\n",
+       "      <td>12027.16</td>\n",
+       "      <td>12198.74</td>\n",
+       "      <td>COMP</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>11/27/2020</td>\n",
+       "      <td>12159.18</td>\n",
+       "      <td>12236.23</td>\n",
+       "      <td>12154.57</td>\n",
+       "      <td>12205.85</td>\n",
+       "      <td>COMP</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>11/25/2020</td>\n",
+       "      <td>12053.89</td>\n",
+       "      <td>12114.77</td>\n",
+       "      <td>12020.95</td>\n",
+       "      <td>12094.40</td>\n",
+       "      <td>COMP</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>11/24/2020</td>\n",
+       "      <td>11939.33</td>\n",
+       "      <td>12049.88</td>\n",
+       "      <td>11863.45</td>\n",
+       "      <td>12036.79</td>\n",
+       "      <td>COMP</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>11/23/2020</td>\n",
+       "      <td>11916.76</td>\n",
+       "      <td>11949.33</td>\n",
+       "      <td>11796.53</td>\n",
+       "      <td>11880.63</td>\n",
+       "      <td>COMP</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Date      Open      High       Low     Close Symbol  Index\n",
+       "0  11/30/2020  12224.25  12244.65  12027.16  12198.74   COMP      0\n",
+       "1  11/27/2020  12159.18  12236.23  12154.57  12205.85   COMP      1\n",
+       "2  11/25/2020  12053.89  12114.77  12020.95  12094.40   COMP      2\n",
+       "3  11/24/2020  11939.33  12049.88  11863.45  12036.79   COMP      3\n",
+       "4  11/23/2020  11916.76  11949.33  11796.53  11880.63   COMP      4"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "NAS.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# #write stock index data back to csv files (includes stock symbol column)\n",
     "NAS.to_csv('Resource/COMP HistoricalPrices.csv', index=False)\n",
     "DOW.to_csv('Resource/DJIA HistoricalPrices.csv', index=False)\n",
     "RUT.to_csv('Resource/RUT 2000 HistoricalPrices.csv', index=False)\n",
-    "SPX.to_csv('Resource/SPX 500 HistoricalPrices.csv', index=False)"
+    "SPX.to_csv('Resource/SPX 500 HistoricalPrices.csv', index=False)\n",
+    "\n",
+    "bch.to_csv('Resource/Coinbase_BCHUSD_d.csv', index=False)\n",
+    "btc.to_csv('Resource/Coinbase_BTCUSD_d.csv', index=False)\n",
+    "eos.to_csv('Resource/Coinbase_EOSUSD_d.csv', index=False)\n",
+    "etc.to_csv('Resource/Coinbase_ETCUSD_d.csv', index=False)\n",
+    "eth.to_csv('Resource/Coinbase_ETHUSD_d.csv', index=False)\n",
+    "lnk.to_csv('Resource/Coinbase_LINKUSD_d.csv', index=False)\n",
+    "ltc.to_csv('Resource/Coinbase_LTCUSD_d.csv', index=False)\n",
+    "rep.to_csv('Resource/Coinbase_REPUSD_d.csv', index=False)\n",
+    "xlm.to_csv('Resource/Coinbase_XLMUSD_d.csv', index=False)\n",
+    "xrp.to_csv('Resource/Coinbase_XRPUSD_d.csv', index=False)"
    ]
   }
  ],
